@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="3.5" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -91,6 +91,7 @@
     <Compile Include="Builder\DBWorkView2.generated.cs" />
     <Compile Include="Builder\FileManager.cs" />
     <Compile Include="Builder\Logger.cs" />
+    <Compile Include="Builder\ProcessHelper.cs" />
     <Compile Include="Builder\SqlToCSharp.cs" />
     <Compile Include="Builder\SVNUpdater.cs" />
     <Compile Include="Builder\Updater.cs" />
@@ -113,7 +114,7 @@
     <None Include="scripts\web.sh" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Properties/" />
+    <Folder Include="Properties\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
