@@ -1,3 +1,7 @@
+2009-03-19  Rolf Bjarne Kvinge  <RKvinge@novell.com>
+
+	* Builder.csproj: Updated.
+
 2009-02-27  Rolf Bjarne Kvinge  <RKvinge@novell.com>
 
 	* Builder.sln:
